# X-TED-CPU

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  TESTING.md  pip_test.py  pyproject.toml
.github/workflows/: build.yml
cpp/: Makefile  X-TED_C++.cpp  X-TED_C++.h  bench_compare  bench_compare.cpp  bindings.cpp  bindings_ref.cpp  ref_wrapper.cpp  ref_wrapper.h
cpp/TEST_XTED_CPU_IMPLEMENTATION/test/: Makefile  X-TED_CPU
python/: test_compare.py  xted_cpu.py
python/xted/: __init__.py
tests/: test_nlp.py  test_singular.py  test_smoke.py
