[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "x-ted"
version = "0.1.0"
description = "A parallel CPU implementation of a novel tree edit distance algorithm with advanced preprocessing"
requires-python = ">=3.9, <3.13"
license = "MIT"
dependencies = [
    "numpy>=1.21",
]

[project.urls]
Repository = "https://github.com/cogrean/X-TED-CPU"

[project.optional-dependencies]
nlp = ["spacy>=3.7.0,<4.0"]

[tool.scikit-build]
wheel.packages = ["python/xted"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.scikit-build.cmake]                                                                                                                     
build-type = "Release"